--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "description": "Learning Node JS",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon babel app.js",
+    "start": "nodemon --exec babel-node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
   },
   "repository": {
     "type": "git",
@@ -22,7 +17,9 @@
     "url": "https://github.com/rkreddyy/nodejs-mentoring/issues"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-stage-2": "^7.0.0",
     "@babel/register": "^7.4.4",
