--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning Node JS",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --exec babel-node ./src/app.js",
+    "start": "nodemon --exec babel-node ./src/index.js",
     "text-server": "nodemon --exec babel-node ./http-servers/plain-text-server",
     "html-server": "nodemon --exec babel-node ./http-servers/html-server",
     "json-server": "nodemon --exec babel-node ./http-servers/json-server",
