--- a/package.json
+++ b/package.json
@@ -35,6 +35,13 @@
     "csvjson": "^5.1.0",
     "eventemitter3": "^4.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "through2": "^3.0.1"
   }
 }
