--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "pg": "^7.12.0",
+    "sequelize": "^5.12.3",
+    "sequelize-cli": "^5.5.0",
     "through2": "^3.0.1"
   }
 }
